--- a/.gitignore
+++ b/.gitignore
@@ -37,7 +37,11 @@ playground.xcworkspace
 # Add this line if you want to avoid checking in source code from Swift Package Manager dependencies.
 # Packages/
 # Package.pins
-.build/
+.DS_Store
+/.build
+/Packages
+/*.xcodeproj
+
 
 # CocoaPods
 #
